# NativeSmtpClient

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Examples/: CMakeLists.txt
Examples/src/: main.cpp
NativeSmtpClient/: CMakeLists.txt
NativeSmtpClient/include/: Mail.h  MailAddress.h
NativeSmtpClient/src/: Mail.cpp
examples/: CMakeLists.txt
examples/resource/: Base.htm
examples/src/: main.cpp
include/: Mail.h  MailAddress.h  SmtpClient.h
src/: Mail.cpp  MailAddress.cpp  SmtpClient.cpp
